deploy: 4e54cac4648c9f4adf809445b3456b6ab812edcc

--- a/index.html
+++ b/index.html
@@ -93,6 +93,26 @@ Recent
 <div class="flex flex-column flex-row-ns">
 <div class="blah w-100">
 <h1 class="f3 fw1 athelas mt0 lh-title">
+<a href=./writing/why-i-quit-data-science.html class="color-inherit dim link">
+Why I Quit Data Science
+</a>
+</h1>
+<div class="f6 f5-l lh-copy nested-copy-line-height nested-links">
+Theme: I am interested in knowing how did you come to this decision of moving to SWE from DS/MLE.
+What kind of research did you do to get to this decision? I spoke to a lot of people who were both big companies and startups. I also spoke to folks across multiple markets: Singapore, India, US & Europe. I primarily spoke to people with more than 10-12 years of experience. This is a big difference in my perspective.
+</div>
+<a href=./writing/why-i-quit-data-science.html class="ba b--moon-gray bg-light-gray br2 color-inherit dib f7 hover-bg-moon-gray link mt2 ph2 pv1">read more</a>
+</div>
+</div>
+</div>
+</article>
+</div>
+<div class="relative w-100 mb4">
+<article class="bb b--black-10">
+<div class="db pv4 ph3 ph0-l no-underline dark-gray">
+<div class="flex flex-column flex-row-ns">
+<div class="blah w-100">
+<h1 class="f3 fw1 athelas mt0 lh-title">
 <a href=./writing/antiskill.html class="color-inherit dim link">
 Anti Skills
 </a>
@@ -275,30 +295,14 @@ The First 90 Days for a New Engineer I expect each step to take roughly between 
 </div>
 </article>
 </div>
-<div class="relative w-100 mb4">
-<article class="bb b--black-10">
-<div class="db pv4 ph3 ph0-l no-underline dark-gray">
-<div class="flex flex-column flex-row-ns">
-<div class="blah w-100">
-<h1 class="f3 fw1 athelas mt0 lh-title">
-<a href=./writing/building-a-data-science-team.html class="color-inherit dim link">
-Building a Data Science Team at a Startup
-</a>
-</h1>
-<div class="f6 f5-l lh-copy nested-copy-line-height nested-links">
-Hello!
-If we are meeting for the first time, a short version of my story so far: After doing research engineering for almost 4 years across startups and a BigCo, I joined as an early machine learning engineer at Verloop.io - a B2B startup that makes customer support automation SaaS in 2019. I was there till April 2021.
-We were directly responsible for most Natural Language Processing needs within the business.
-</div>
-<a href=./writing/building-a-data-science-team.html class="ba b--moon-gray bg-light-gray br2 color-inherit dib f7 hover-bg-moon-gray link mt2 ph2 pv1">read more</a>
-</div>
-</div>
-</div>
-</article>
-</div>
 </section>
 <section class=w-100>
 <h1 class=f3>More</h1>
+<h2 class="f5 fw4 mb4 dib mr3">
+<a href=./writing/building-a-data-science-team.html class="link black dim">
+Building a Data Science Team at a Startup
+</a>
+</h2>
 <h2 class="f5 fw4 mb4 dib mr3">
 <a href=./writing/verloop-ml-prep-guide.html class="link black dim">
 Verloop NLP Interview Prep Guide
@@ -312,11 +316,6 @@ Talent Cooling
 <h2 class="f5 fw4 mb4 dib mr3">
 <a href=./writing/shreyas.html class="link black dim">
 Shreyas Karanth: Moving from SW Engg to Product
-</a>
-</h2>
-<h2 class="f5 fw4 mb4 dib mr3">
-<a href=./writing/standout.html class="link black dim">
-Standing Out at Work
 </a>
 </h2>
 <a href=./writing.html class="link db f6 pa2 br3 bg-mid-gray white dim w4 tc">All </a>
