--- a/writing.html
+++ b/writing.html
@@ -92,6 +92,21 @@ Collection of my Essays and Thoughts
 <div class="bg-white mb3 pa4 gray overflow-hidden">
 <span class="f6 db">Writing</span>
 <h1 class="f3 near-black">
+<a href=./writing/why-i-quit-data-science.html class="link black dim">
+Why I Quit Data Science
+</a>
+</h1>
+<div class="nested-links f5 lh-copy nested-copy-line-height">
+Theme: I am interested in knowing how did you come to this decision of moving to SWE from DS/MLE.
+What kind of research did you do to get to this decision? I spoke to a lot of people who were both big companies and startups. I also spoke to folks across multiple markets: Singapore, India, US & Europe. I primarily spoke to people with more than 10-12 years of experience. This is a big difference in my perspective.
+</div>
+</div>
+</div>
+</div>
+<div class="relative w-100 w-30-l mb4 bg-white"><div class="relative w-100 mb4 bg-white nested-copy-line-height">
+<div class="bg-white mb3 pa4 gray overflow-hidden">
+<span class="f6 db">Writing</span>
+<h1 class="f3 near-black">
 <a href=./writing/antiskill.html class="link black dim">
 Anti Skills
 </a>
@@ -212,22 +227,6 @@ Aditya Ankur, asked me:
 I know that there is a book for the first 90 days as an executive. Is there something similar for programmers?
 I don&rsquo;t quite know of a book/essay which covers this yet sticks to the question. So I am writing one for him.
 The First 90 Days for a New Engineer I expect each step to take roughly between 10 and 30 days, depending on the pace of your project + size of the team.
-</div>
-</div>
-</div>
-</div>
-<div class="relative w-100 w-30-l mb4 bg-white"><div class="relative w-100 mb4 bg-white nested-copy-line-height">
-<div class="bg-white mb3 pa4 gray overflow-hidden">
-<span class="f6 db">Writing</span>
-<h1 class="f3 near-black">
-<a href=./writing/building-a-data-science-team.html class="link black dim">
-Building a Data Science Team at a Startup
-</a>
-</h1>
-<div class="nested-links f5 lh-copy nested-copy-line-height">
-Hello!
-If we are meeting for the first time, a short version of my story so far: After doing research engineering for almost 4 years across startups and a BigCo, I joined as an early machine learning engineer at Verloop.io - a B2B startup that makes customer support automation SaaS in 2019. I was there till April 2021.
-We were directly responsible for most Natural Language Processing needs within the business.
 </div>
 </div>
 </div>
