--- a/tags.html
+++ b/tags.html
@@ -439,8 +439,8 @@ Why I Quit Data Science
 </a>
 </h1>
 <div class="nested-links f5 lh-copy nested-copy-line-height">
-Theme: I am interested in knowing how did you come to this decision of moving to SWE from DS/MLE.
-What kind of research did you do to get to this decision? I spoke to a lot of people who were both big companies and startups. I also spoke to folks across multiple markets: Singapore, India, US & Europe. I primarily spoke to people with more than 10-12 years of experience. This is a big difference in my perspective.
+Question from a friend: I am interested in knowing how did you come to this decision of moving to SWE from DS/MLE. Since I&rsquo;ve been asked a variant of this question quite a few times, I thought it would be good to share my answer.
+What kind of research did you do to get to this decision? I spoke to a lot of people who were both big companies and startups.
 </div>
 </div>
 </div>
