deploy: 7aabd302b84ddec3b303e1b84ba5f21cc0e01180

--- a/writing/breaking-into-nlp.html
+++ b/writing/breaking-into-nlp.html
@@ -138,6 +138,9 @@ There are other secondary gains too from doing this. Once you write a paper, you
 <p class="f5 b mb3">Related</p>
 <ul class="pa0 list">
 <li class=mb2>
+<a href=../drafts/where-are-my-demons.html>Where are my demons?</a>
+</li>
+<li class=mb2>
 <a href=../writing/talentcooling.html>Talent Cooling</a>
 </li>
 <li class=mb2>
@@ -178,9 +181,6 @@ There are other secondary gains too from doing this. Once you write a paper, you
 </li>
 <li class=mb2>
 <a href=../writing/diwali_2018.html>Happy Diwali 2018</a>
-</li>
-<li class=mb2>
-<a href=../writing/picking-startup-to-work-with.html>Picking a Startup Team You Want to Work With</a>
 </li>
 </ul>
 </div>
