--- a/writing/politics_at_work.html
+++ b/writing/politics_at_work.html
@@ -110,6 +110,9 @@ writing
 <p class="f5 b mb3">Related</p>
 <ul class="pa0 list">
 <li class=mb2>
+<a href=../drafts/where-are-my-demons.html>Where are my demons?</a>
+</li>
+<li class=mb2>
 <a href=../now.html>Now</a>
 </li>
 <li class=mb2>
