--- a/writing/why-i-quit-data-science.html
+++ b/writing/why-i-quit-data-science.html
@@ -175,6 +175,9 @@ writing
 <a href=../writing/politics_at_work.html>Politics at Work</a>
 </li>
 <li class=mb2>
+<a href=../drafts/where-are-my-demons.html>Where are my demons?</a>
+</li>
+<li class=mb2>
 <a href=../now.html>Now</a>
 </li>
 <li class=mb2>
