--- a/tags.html
+++ b/tags.html
@@ -118,6 +118,21 @@ Broadly speaking, the aim in forming connections can be split into Long Term and
 </div>
 <div class="relative w-100 mb4 bg-white nested-copy-line-height">
 <div class="bg-white mb3 pa4 gray overflow-hidden">
+<span class="f6 db">Drafts</span>
+<h1 class="f3 near-black">
+<a href=./drafts/where-are-my-demons.html class="link black dim">
+Where are my demons?
+</a>
+</h1>
+<div class="nested-links f5 lh-copy nested-copy-line-height">
+Repeat the Good Fight but use the Demons as a metaphor here
+It is only lately that I&rsquo;ve realised that I&rsquo;m at conflict with myself &ndash; it is only if I&rsquo;ve embraced my own demons that I can run into other demons worth killing. And the further I get away from my own demons, the harder it is to find demons which I can kill.
+I envy people with demons who are not afraid to kill them.
+</div>
+</div>
+</div>
+<div class="relative w-100 mb4 bg-white nested-copy-line-height">
+<div class="bg-white mb3 pa4 gray overflow-hidden">
 <span class="f6 db">Writing</span>
 <h1 class="f3 near-black">
 <a href=./writing/first-90-days-engineer-version.html class="link black dim">
@@ -500,6 +515,21 @@ Politics at Work
 <div class="nested-links f5 lh-copy nested-copy-line-height">
 This quick entry is partially inspired by a similar entry from Manas Saloi. Ofc, other folks have offered their opinions on Basecamp and earlier Coinbase.
 The woke mob is shitting on Jason and DHH, but I strongly agree with Basecamp’s new policies. IMHO a company is supposed to create an environment where people come and do their best work without having to align to one side of the political spectrum.
+</div>
+</div>
+</div>
+<div class="relative w-100 mb4 bg-white nested-copy-line-height">
+<div class="bg-white mb3 pa4 gray overflow-hidden">
+<span class="f6 db">Drafts</span>
+<h1 class="f3 near-black">
+<a href=./drafts/where-are-my-demons.html class="link black dim">
+Where are my demons?
+</a>
+</h1>
+<div class="nested-links f5 lh-copy nested-copy-line-height">
+Repeat the Good Fight but use the Demons as a metaphor here
+It is only lately that I&rsquo;ve realised that I&rsquo;m at conflict with myself &ndash; it is only if I&rsquo;ve embraced my own demons that I can run into other demons worth killing. And the further I get away from my own demons, the harder it is to find demons which I can kill.
+I envy people with demons who are not afraid to kill them.
 </div>
 </div>
 </div>
