deploy: 2b9a114284e99a8dbc18229ffb1128bb1012ba8e

--- a/index.html
+++ b/index.html
@@ -91,7 +91,12 @@ Recent
 <article class="bb b--black-10">
 <div class="db pv4 ph3 ph0-l no-underline dark-gray">
 <div class="flex flex-column flex-row-ns">
-<div class="blah w-100">
+<div class="pr3-ns mb4 mb0-ns w-100 w-40-ns">
+<a href=./writing/why-i-quit-data-science.html class="db grow">
+<img src=https://nirantk.com/images/began.jpeg class=img alt="image from Why I Quit Data Science">
+</a>
+</div>
+<div class="blah w-100 w-60-ns pl3-ns">
 <h1 class="f3 fw1 athelas mt0 lh-title">
 <a href=./writing/why-i-quit-data-science.html class="color-inherit dim link">
 Why I Quit Data Science
