deploy: 5ed61c962ceb8e96349667ea5657b8f8add465f0

--- a/writing/antiskill.html
+++ b/writing/antiskill.html
@@ -145,9 +145,6 @@ I&rsquo;m super happy for you! You&rsquo;ll most likely not just be good at it, 
 <a href=../writing/breaking-into-nlp.html>Breaking into NLP</a>
 </li>
 <li class=mb2>
-<a href=../drafts/where-are-my-demons.html>Where are my demons?</a>
-</li>
-<li class=mb2>
 <a href=../writing/talentcooling.html>Talent Cooling</a>
 </li>
 <li class=mb2>
@@ -185,6 +182,9 @@ I&rsquo;m super happy for you! You&rsquo;ll most likely not just be good at it, 
 </li>
 <li class=mb2>
 <a href=../writing/reflectedglory.html>Don't Bask in Reflected Glory</a>
+</li>
+<li class=mb2>
+<a href=../writing/diwali_2018.html>Happy Diwali 2018</a>
 </li>
 </ul>
 </div>
