--- a/writing/why-i-quit-data-science.html
+++ b/writing/why-i-quit-data-science.html
@@ -173,9 +173,6 @@ writing
 <a href=../writing/breaking-into-nlp.html>Breaking into NLP</a>
 </li>
 <li class=mb2>
-<a href=../drafts/where-are-my-demons.html>Where are my demons?</a>
-</li>
-<li class=mb2>
 <a href=../writing/talentcooling.html>Talent Cooling</a>
 </li>
 <li class=mb2>
@@ -210,6 +207,9 @@ writing
 </li>
 <li class=mb2>
 <a href=../writing/diwali_2019.html>Happy Diwali 2019</a>
+</li>
+<li class=mb2>
+<a href=../writing/reflectedglory.html>Don't Bask in Reflected Glory</a>
 </li>
 </ul>
 </div>
