deploy: 1ce81da644c85ad260a06cd5a150d8971b1febdd

--- a/tags.html
+++ b/tags.html
@@ -598,7 +598,7 @@ Youth enclaves can actually be restrictive. In fact their networking should be a
 <span class="f6 db">Writing</span>
 <h1 class="f3 near-black">
 <a href=./writing/diwali_2019.html class="link black dim">
-Happy Diwali 2019
+Annual Letter: Diwali 2019
 </a>
 </h1>
 <div class="nested-links f5 lh-copy nested-copy-line-height">
@@ -628,7 +628,7 @@ Don't Bask in Reflected Glory
 <span class="f6 db">Writing</span>
 <h1 class="f3 near-black">
 <a href=./writing/diwali_2018.html class="link black dim">
-Happy Diwali 2018
+Annual Letter: Diwali 2018
 </a>
 </h1>
 <div class="nested-links f5 lh-copy nested-copy-line-height">
