--- a/writing/actlike35.html
+++ b/writing/actlike35.html
@@ -164,13 +164,13 @@ writing
 <a href=../writing/ruleof40.html>Thinking of Your Career as a Startup</a>
 </li>
 <li class=mb2>
-<a href=../writing/diwali_2019.html>Happy Diwali 2019</a>
+<a href=../writing/diwali_2019.html>Annual Letter: Diwali 2019</a>
 </li>
 <li class=mb2>
 <a href=../writing/reflectedglory.html>Don't Bask in Reflected Glory</a>
 </li>
 <li class=mb2>
-<a href=../writing/diwali_2018.html>Happy Diwali 2018</a>
+<a href=../writing/diwali_2018.html>Annual Letter: Diwali 2018</a>
 </li>
 <li class=mb2>
 <a href=../writing/picking-startup-to-work-with.html>Picking a Startup Team You Want to Work With</a>
