--- a/writing/belief_arbitrage.html
+++ b/writing/belief_arbitrage.html
@@ -195,13 +195,13 @@ Talent, Genius and Courage
 <a href=../writing/actlike35.html>Act Like You're 35</a>
 </li>
 <li class=mb2>
-<a href=../writing/diwali_2019.html>Happy Diwali 2019</a>
+<a href=../writing/diwali_2019.html>Annual Letter: Diwali 2019</a>
 </li>
 <li class=mb2>
 <a href=../writing/reflectedglory.html>Don't Bask in Reflected Glory</a>
 </li>
 <li class=mb2>
-<a href=../writing/diwali_2018.html>Happy Diwali 2018</a>
+<a href=../writing/diwali_2018.html>Annual Letter: Diwali 2018</a>
 </li>
 <li class=mb2>
 <a href=../writing/goodfight.html>The Good Fight</a>
