--- a/writing/why-i-quit-data-science.html
+++ b/writing/why-i-quit-data-science.html
@@ -206,7 +206,7 @@ writing
 <a href=../writing/ruleof40.html>Thinking of Your Career as a Startup</a>
 </li>
 <li class=mb2>
-<a href=../writing/diwali_2019.html>Happy Diwali 2019</a>
+<a href=../writing/diwali_2019.html>Annual Letter: Diwali 2019</a>
 </li>
 <li class=mb2>
 <a href=../writing/reflectedglory.html>Don't Bask in Reflected Glory</a>
