--- a/writing/antiskill.html
+++ b/writing/antiskill.html
@@ -178,13 +178,13 @@ I&rsquo;m super happy for you! You&rsquo;ll most likely not just be good at it, 
 <a href=../writing/ruleof40.html>Thinking of Your Career as a Startup</a>
 </li>
 <li class=mb2>
-<a href=../writing/diwali_2019.html>Happy Diwali 2019</a>
+<a href=../writing/diwali_2019.html>Annual Letter: Diwali 2019</a>
 </li>
 <li class=mb2>
 <a href=../writing/reflectedglory.html>Don't Bask in Reflected Glory</a>
 </li>
 <li class=mb2>
-<a href=../writing/diwali_2018.html>Happy Diwali 2018</a>
+<a href=../writing/diwali_2018.html>Annual Letter: Diwali 2018</a>
 </li>
 </ul>
 </div>
