--- a/writing/reflectedglory.html
+++ b/writing/reflectedglory.html
@@ -232,7 +232,7 @@ The sun shines it&rsquo;s own light, it&rsquo;s the moon that steals light</p>
 <p class="f5 b mb3">Related</p>
 <ul class="pa0 list">
 <li class=mb2>
-<a href=../writing/diwali_2018.html>Happy Diwali 2018</a>
+<a href=../writing/diwali_2018.html>Annual Letter: Diwali 2018</a>
 </li>
 <li class=mb2>
 <a href=../writing/goodfight.html>The Good Fight</a>
