deploy: faf0e363afc9b7450bb9cdfc094caba65bf73093

--- a/tags.html
+++ b/tags.html
@@ -824,6 +824,21 @@ What I don’t like about PyTorch is it’s incessant requirement of debugging b
 </div>
 </div>
 </div>
+<div class="relative w-100 mb4 bg-white nested-copy-line-height">
+<div class="bg-white mb3 pa4 gray overflow-hidden">
+<span class="f6 db">Writing</span>
+<h1 class="f3 near-black">
+<a href=./writing/imports/sankar-wlb.html class="link black dim">
+The Case Against Work Life Balance
+</a>
+</h1>
+<div class="nested-links f5 lh-copy nested-copy-line-height">
+Note from Nirant: This is an archived blog post from here by Syam Sankar. I am not the author of this post. I&rsquo;m keeping it here since the original source is no longer available.
+I&rsquo;ve taken the liberty to copy paste the raw text:
+Given my journey, you can imagine my first reaction to questions of work-life balance is fairly unsympathetic. I want to protest that, by legitimizing such a false dichotomy, you’re pre-empting a much more meaningful conversation.
+</div>
+</div>
+</div>
 <h2 class=f1>
 <a href=./tags/tech class="link blue hover-black">
 Tag: tech
@@ -995,6 +1010,21 @@ A Getting Started Guide
 Let us get our facts straight, shall we?
 I am writing from my non-existent but probably relevant experience. I worked in a Machine Learning role at Samsung Research, Bengaluru. It is only 1 of the 4 research enterprises which hire Machine Learning researchers from Indian colleges — the other being Microsoft, Xerox, and IBM Watson.
 I am now in a even more Computer Vision focused role for a small enterprise tech company.
+</div>
+</div>
+</div>
+<div class="relative w-100 mb4 bg-white nested-copy-line-height">
+<div class="bg-white mb3 pa4 gray overflow-hidden">
+<span class="f6 db">Writing</span>
+<h1 class="f3 near-black">
+<a href=./writing/imports/sankar-wlb.html class="link black dim">
+The Case Against Work Life Balance
+</a>
+</h1>
+<div class="nested-links f5 lh-copy nested-copy-line-height">
+Note from Nirant: This is an archived blog post from here by Syam Sankar. I am not the author of this post. I&rsquo;m keeping it here since the original source is no longer available.
+I&rsquo;ve taken the liberty to copy paste the raw text:
+Given my journey, you can imagine my first reaction to questions of work-life balance is fairly unsympathetic. I want to protest that, by legitimizing such a false dichotomy, you’re pre-empting a much more meaningful conversation.
 </div>
 </div>
 </div>
