--- a/writing/building-a-data-science-team.html
+++ b/writing/building-a-data-science-team.html
@@ -349,6 +349,9 @@ Nirant</p>
 <li class=mb2>
 <a href=../writing/techtalktips.html>Tech Talk Tips</a>
 </li>
+<li class=mb2>
+<a href=../writing/imports/sankar-wlb.html>The Case Against Work Life Balance</a>
+</li>
 </ul>
 </div>
 </aside>
