--- a/writing/data-science-org-design.html
+++ b/writing/data-science-org-design.html
@@ -265,6 +265,9 @@ writing
 <li class=mb2>
 <a href=../writing/techtalktips.html>Tech Talk Tips</a>
 </li>
+<li class=mb2>
+<a href=../writing/imports/sankar-wlb.html>The Case Against Work Life Balance</a>
+</li>
 </ul>
 </div>
 </aside>
