--- a/writing/datasciencejob.html
+++ b/writing/datasciencejob.html
@@ -141,6 +141,14 @@ Data Science: Breaking Into the Industry
 </ul>
 </nav>
 </div>
+<div class="bg-light-gray pa3 nested-list-reset nested-copy-line-height nested-links">
+<p class="f5 b mb3">Related</p>
+<ul class="pa0 list">
+<li class=mb2>
+<a href=../writing/imports/sankar-wlb.html>The Case Against Work Life Balance</a>
+</li>
+</ul>
+</div>
 </aside>
 </article>
 </main>
