--- a/writing/mathforai.html
+++ b/writing/mathforai.html
@@ -115,16 +115,19 @@ writing
 <a href=../writing/modelmonitoring.html>ML Model Monitoring</a>
 </li>
 <li class=mb2>
-<a href=../writing/pythonfstrings.html>Best of Python 3 f-strings</a>
+<a href=../writing/silentriseofpytorch.html>The Silent Rise of PyTorch Ecosystem</a>
 </li>
 <li class=mb2>
-<a href=../writing/silentriseofpytorch.html>The Silent Rise of PyTorch Ecosystem</a>
+<a href=../writing/pythonfstrings.html>Best of Python 3 f-strings</a>
 </li>
 <li class=mb2>
 <a href=../writing/techtalktips.html>Tech Talk Tips</a>
 </li>
 <li class=mb2>
 <a href=../writing/datasciencejob.html>How to prepare for a Data Science job from college?</a>
+</li>
+<li class=mb2>
+<a href=../writing/imports/sankar-wlb.html>The Case Against Work Life Balance</a>
 </li>
 </ul>
 </div>
