--- a/writing/modelmonitoring.html
+++ b/writing/modelmonitoring.html
@@ -234,6 +234,9 @@ Confirm this. If not, update the model by training with updated class frequency 
 <li class=mb2>
 <a href=../writing/techtalktips.html>Tech Talk Tips</a>
 </li>
+<li class=mb2>
+<a href=../writing/imports/sankar-wlb.html>The Case Against Work Life Balance</a>
+</li>
 </ul>
 </div>
 </aside>
