--- a/writing/pythonfstrings.html
+++ b/writing/pythonfstrings.html
@@ -196,6 +196,9 @@ print(<span style=color:#e6db74>f</span><span style=color:#e6db74>&#39;</span><s
 <a href=../writing/silentriseofpytorch.html>The Silent Rise of PyTorch Ecosystem</a>
 </li>
 <li class=mb2>
+<a href=../writing/imports/sankar-wlb.html>The Case Against Work Life Balance</a>
+</li>
+<li class=mb2>
 <a href=../writing/techtalktips.html>Tech Talk Tips</a>
 </li>
 <li class=mb2>
