--- a/writing/silentriseofpytorch.html
+++ b/writing/silentriseofpytorch.html
@@ -182,6 +182,9 @@ PyTorch Lightning: custom built for DL experts looking for experimentation tooli
 <a href=../writing/datasciencejob.html>How to prepare for a Data Science job from college?</a>
 </li>
 <li class=mb2>
+<a href=../writing/imports/sankar-wlb.html>The Case Against Work Life Balance</a>
+</li>
+<li class=mb2>
 <a href=../writing/techtalktips.html>Tech Talk Tips</a>
 </li>
 </ul>
