--- a/writing/techtalktips.html
+++ b/writing/techtalktips.html
@@ -196,6 +196,9 @@ Assume one story arc is approx per 10 mins of speaking. A mental model of &ldquo
 <li class=mb2>
 <a href=../writing/datasciencejob.html>How to prepare for a Data Science job from college?</a>
 </li>
+<li class=mb2>
+<a href=../writing/imports/sankar-wlb.html>The Case Against Work Life Balance</a>
+</li>
 </ul>
 </div>
 </aside>
