--- a/writing/verloop-ml-prep-guide.html
+++ b/writing/verloop-ml-prep-guide.html
@@ -307,6 +307,9 @@ writing
 <li class=mb2>
 <a href=../writing/picking-startup-to-work-with.html>Picking a Startup Team You Want to Work With</a>
 </li>
+<li class=mb2>
+<a href=../writing/imports/sankar-wlb.html>The Case Against Work Life Balance</a>
+</li>
 </ul>
 </div>
 </aside>
