deploy: 453f5c0f8ce7cf77afb20e1a45981f185f6495d2

--- a/drafts.html
+++ b/drafts.html
@@ -5,7 +5,7 @@
 <title>Nirant Kasliwal</title>
 <meta name=viewport content="width=device-width,minimum-scale=1">
 <meta name=description content>
-<meta name=generator content="Hugo 0.92.1">
+<meta name=generator content="Hugo 0.92.2">
 <meta name=ROBOTS content="INDEX, FOLLOW">
 <link rel=stylesheet href=./ananke/css/main.min.abe0b1c07d5e33565b0f9b998a7b1b5228b709f36af363e2766bc8035f2237b7.css>
 <link href=./drafts/index.xml rel=alternate type=application/rss+xml title="Nirant Kasliwal">
@@ -82,41 +82,25 @@ Drafts
 <div class="bg-white mb3 pa4 gray overflow-hidden">
 <span class="f6 db">Drafts</span>
 <h1 class="f3 near-black">
-<a href=./drafts/ml-hiring.html class="link black dim">
-Dos and Don'ts for ML Hiring
-</a>
-</h1>
-<div class="nested-links f5 lh-copy nested-copy-line-height">
-Do Seniormost hire first: Start by hiring the senior most person you&rsquo;re going to hire. E.g. start by hiring the ML Lead (assuming you already have a CTO) Have a means to tell that your investment in data science is working out or not Closest to User first: Hire the person who will consume the data to build for the user first Sourcing: Begin sourcing early and over-emphasise two channels: Referrals and Portfolios Typically, in India - expect: ~2 months to close a full time role at early career (0-3 years) and ~3 months to close a mid career (3-7 years) and 6+ months to close a senior hire If a developer has open source code contributions in the last 2-3 years, consider waving off the coding or algorithmic challenge to speed up the interview process Pay above market cash salaries In 12-18 months from now, when your ML Engineer will have internalised all the requirements, company culture and built a bunch of important tooling - she would get an offer which is 2-3x of today.
-</div>
-</div>
-</div>
-</div>
-<div class="relative w-100 w-30-l mb4 bg-white"><div class="relative w-100 mb4 bg-white nested-copy-line-height">
-<div class="bg-white mb3 pa4 gray overflow-hidden">
-<span class="f6 db">Drafts</span>
-<h1 class="f3 near-black">
-<a href=./drafts/beware-of-false-binaries.html class="link black dim">
-</a>
-</h1>
-<div class="nested-links f5 lh-copy nested-copy-line-height">
-Binaries and boundaries are useful as mental heuristics for decision making, but they are also handicaps. It&rsquo;s stupid to play the sport of life with a handicap.
-</div>
-</div>
-</div>
-</div>
-<div class="relative w-100 w-30-l mb4 bg-white"><div class="relative w-100 mb4 bg-white nested-copy-line-height">
-<div class="bg-white mb3 pa4 gray overflow-hidden">
-<span class="f6 db">Drafts</span>
-<h1 class="f3 near-black">
 <a href=./drafts/bigco-vs-startups.html class="link black dim">
 </a>
 </h1>
 <div class="nested-links f5 lh-copy nested-copy-line-height">
-https://danluu.com/startup-tradeoffs/#fnref:S
-Beyond First 90 Days - 2 Less Obvious Ideas
-I am assuming that you already know the hygiene factors: Make few promises. Keep most of them and exceed few of them atleast. Get to like the top 5% in the skill of effort estimation for your own work at the very least. And so on.
-Contribute to Developer Ecosystem Improving any part of the developer ecosystem is useful and visible at the same time.
+Expand on this perhaps from a financial vs learning lens https://danluu.com/startup-tradeoffs/#fnref:S
+</div>
+</div>
+</div>
+</div>
+<div class="relative w-100 w-30-l mb4 bg-white"><div class="relative w-100 mb4 bg-white nested-copy-line-height">
+<div class="bg-white mb3 pa4 gray overflow-hidden">
+<span class="f6 db">Drafts</span>
+<h1 class="f3 near-black">
+<a href=./drafts/work-meaning.html class="link black dim">
+</a>
+</h1>
+<div class="nested-links f5 lh-copy nested-copy-line-height">
+I began writing this post as a rebuttal to Sajith Pai&rsquo;s &lsquo;Work as Play&rsquo; in his Shower Thoughts[1]. It evoked quite an emotional response from me, quite similar to how I see sprezzatura: a form of deceit on behalf of the professional, and unfair expectation to have societally.
+But I realized that my emotional friction with the post has a more interesting dimension to it. This essay is about the not that often asked question:
 </div>
 </div>
 </div>
