--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <title>Nirant Kasliwal | Nirant Kasliwal</title>
 <meta name=viewport content="width=device-width,minimum-scale=1">
 <meta name=description content="I dabble in Natural Language Processing">
-<meta name=generator content="Hugo 0.92.1">
+<meta name=generator content="Hugo 0.92.2">
 <meta name=ROBOTS content="INDEX, FOLLOW">
 <link rel=stylesheet href=./ananke/css/main.min.abe0b1c07d5e33565b0f9b998a7b1b5228b709f36af363e2766bc8035f2237b7.css>
 <link href=./index.xml rel=alternate type=application/rss+xml title="Nirant Kasliwal">
@@ -87,6 +87,47 @@ I dabble in Natural Language Processing
 Recent
 </h1>
 <section class="w-100 mw8">
+<div class="relative w-100 mb4">
+<article class="bb b--black-10">
+<div class="db pv4 ph3 ph0-l no-underline dark-gray">
+<div class="flex flex-column flex-row-ns">
+<div class="blah w-100">
+<h1 class="f3 fw1 athelas mt0 lh-title">
+<a href=./writing/beyond-first-90-days.html class="color-inherit dim link">
+Beyond First 90 Days
+</a>
+</h1>
+<div class="f6 f5-l lh-copy nested-copy-line-height nested-links">
+This one&rsquo;s gonna be brief and echoes 2 Less Obvious Ideas to the younger me.
+I am assuming that you already know the hygiene factors: Make few promises. Keep most of them and exceed few of them atleast. Get to like the top 5% in the skill of effort estimation for your own work at the very least. And so on.
+Contribute to Developer Ecosystem Improving any part of the developer ecosystem is useful and visible at the same time.
+</div>
+<a href=./writing/beyond-first-90-days.html class="ba b--moon-gray bg-light-gray br2 color-inherit dib f7 hover-bg-moon-gray link mt2 ph2 pv1">read more</a>
+</div>
+</div>
+</div>
+</article>
+</div>
+<div class="relative w-100 mb4">
+<article class="bb b--black-10">
+<div class="db pv4 ph3 ph0-l no-underline dark-gray">
+<div class="flex flex-column flex-row-ns">
+<div class="blah w-100">
+<h1 class="f3 fw1 athelas mt0 lh-title">
+<a href=./writing/ml-hiring.html class="color-inherit dim link">
+Dos and Don'ts for ML Hiring
+</a>
+</h1>
+<div class="f6 f5-l lh-copy nested-copy-line-height nested-links">
+This is primarily for my future self. These are observations based on my own experience of 2 years at Verloop.io and helping a few companies hire for similar roles.
+Do Seniormost hire first: Start by hiring the senior most person you&rsquo;re going to hire. E.g. start by hiring the ML Lead (assuming you already have a CTO) Have a means to tell that your investment in data science is working out or not Closest to User first: Hire the person who will consume the data to build for the user first Sourcing: Begin sourcing early and over-emphasise two channels: Referrals and Portfolios Typically, in India - expect: ~2 months to close a full time role at early career (0-3 years) and ~3 months to close a mid career (3-7 years) and 6+ months to close a senior hire If a developer has open source code contributions in the last 2-3 years, consider waving off the coding or algorithmic challenge to speed up the interview process Pay above market cash salaries In 12-18 months from now, when your ML Engineer will have internalised all the requirements, company culture and built a bunch of important tooling - she would get an offer which is 2-3x of today.
+</div>
+<a href=./writing/ml-hiring.html class="ba b--moon-gray bg-light-gray br2 color-inherit dib f7 hover-bg-moon-gray link mt2 ph2 pv1">read more</a>
+</div>
+</div>
+</div>
+</article>
+</div>
 <div class="relative w-100 mb4">
 <article class="bb b--black-10">
 <div class="db pv4 ph3 ph0-l no-underline dark-gray">
@@ -251,58 +292,19 @@ Why Do We Need Instructions on How to Read a Deep Learning Paper? Quantity: Ther
 </div>
 </article>
 </div>
-<div class="relative w-100 mb4">
-<article class="bb b--black-10">
-<div class="db pv4 ph3 ph0-l no-underline dark-gray">
-<div class="flex flex-column flex-row-ns">
-<div class="pr3-ns mb4 mb0-ns w-100 w-40-ns">
-<a href=./writing/character-is-net-worth.html class="db grow">
-<img src=https://nirantk.com/images/bitsaa-keychain.png class=img alt="image from Character is Net Worth">
-</a>
-</div>
-<div class="blah w-100 w-60-ns pl3-ns">
-<h1 class="f3 fw1 athelas mt0 lh-title">
-<a href=./writing/character-is-net-worth.html class="color-inherit dim link">
-Character is Net Worth
-</a>
-</h1>
-<div class="f6 f5-l lh-copy nested-copy-line-height nested-links">
-A useful metaphor to think about character of a person is their financial “net worth”. Like your net worth, this does not mean that you have that much cash to spend. It is a sum total of something.
-Net Worth is the Sum Total of the Assets & Liabilities
-Character is the Sum Total of the Decisions you Own: Good and Bad
-Like your Net Worth can be negative due to a large liability e.
-</div>
-<a href=./writing/character-is-net-worth.html class="ba b--moon-gray bg-light-gray br2 color-inherit dib f7 hover-bg-moon-gray link mt2 ph2 pv1">read more</a>
-</div>
-</div>
-</div>
-</article>
-</div>
-<div class="relative w-100 mb4">
-<article class="bb b--black-10">
-<div class="db pv4 ph3 ph0-l no-underline dark-gray">
-<div class="flex flex-column flex-row-ns">
-<div class="blah w-100">
-<h1 class="f3 fw1 athelas mt0 lh-title">
-<a href=./writing/first-90-days-engineer-version.html class="color-inherit dim link">
-First 90 Days - Software Engineer Version
-</a>
-</h1>
-<div class="f6 f5-l lh-copy nested-copy-line-height nested-links">
-Aditya Ankur, asked me:
-I know that there is a book for the first 90 days as an executive. Is there something similar for programmers?
-I don&rsquo;t quite know of a book/essay which covers this yet sticks to the question. So I am writing one for him.
-The First 90 Days for a New Engineer I expect each step to take roughly between 10 and 30 days, depending on the pace of your project + size of the team.
-</div>
-<a href=./writing/first-90-days-engineer-version.html class="ba b--moon-gray bg-light-gray br2 color-inherit dib f7 hover-bg-moon-gray link mt2 ph2 pv1">read more</a>
-</div>
-</div>
-</div>
-</article>
-</div>
 </section>
 <section class=w-100>
 <h1 class=f3>More</h1>
+<h2 class="f5 fw4 mb4 dib mr3">
+<a href=./writing/character-is-net-worth.html class="link black dim">
+Character is Net Worth
+</a>
+</h2>
+<h2 class="f5 fw4 mb4 dib mr3">
+<a href=./writing/first-90-days-engineer-version.html class="link black dim">
+First 90 Days - Software Engineer Version
+</a>
+</h2>
 <h2 class="f5 fw4 mb4 dib mr3">
 <a href=./writing/building-a-data-science-team.html class="link black dim">
 Building a Data Science Team at a Startup
@@ -311,16 +313,6 @@ Building a Data Science Team at a Startup
 <h2 class="f5 fw4 mb4 dib mr3">
 <a href=./writing/verloop-ml-prep-guide.html class="link black dim">
 Verloop NLP Interview Prep Guide
-</a>
-</h2>
-<h2 class="f5 fw4 mb4 dib mr3">
-<a href=./writing/talentcooling.html class="link black dim">
-Talent Cooling
-</a>
-</h2>
-<h2 class="f5 fw4 mb4 dib mr3">
-<a href=./writing/shreyas.html class="link black dim">
-Shreyas Karanth: Moving from SW Engg to Product
 </a>
 </h2>
 <a href=./writing.html class="link db f6 pa2 br3 bg-mid-gray white dim w4 tc">All </a>
