--- a/writing.html
+++ b/writing.html
@@ -5,7 +5,7 @@
 <title>Nirant Kasliwal</title>
 <meta name=viewport content="width=device-width,minimum-scale=1">
 <meta name=description content="Collection of my Essays and Thoughts">
-<meta name=generator content="Hugo 0.92.1">
+<meta name=generator content="Hugo 0.92.2">
 <meta name=ROBOTS content="INDEX, FOLLOW">
 <link rel=stylesheet href=./ananke/css/main.min.abe0b1c07d5e33565b0f9b998a7b1b5228b709f36af363e2766bc8035f2237b7.css>
 <link href=./writing/index.xml rel=alternate type=application/rss+xml title="Nirant Kasliwal">
@@ -88,6 +88,37 @@ Collection of my Essays and Thoughts
 </ol>
 </section>
 <section class="flex-ns flex-wrap justify-around mt5">
+<div class="relative w-100 w-30-l mb4 bg-white"><div class="relative w-100 mb4 bg-white nested-copy-line-height">
+<div class="bg-white mb3 pa4 gray overflow-hidden">
+<span class="f6 db">Writing</span>
+<h1 class="f3 near-black">
+<a href=./writing/beyond-first-90-days.html class="link black dim">
+Beyond First 90 Days
+</a>
+</h1>
+<div class="nested-links f5 lh-copy nested-copy-line-height">
+This one&rsquo;s gonna be brief and echoes 2 Less Obvious Ideas to the younger me.
+I am assuming that you already know the hygiene factors: Make few promises. Keep most of them and exceed few of them atleast. Get to like the top 5% in the skill of effort estimation for your own work at the very least. And so on.
+Contribute to Developer Ecosystem Improving any part of the developer ecosystem is useful and visible at the same time.
+</div>
+</div>
+</div>
+</div>
+<div class="relative w-100 w-30-l mb4 bg-white"><div class="relative w-100 mb4 bg-white nested-copy-line-height">
+<div class="bg-white mb3 pa4 gray overflow-hidden">
+<span class="f6 db">Writing</span>
+<h1 class="f3 near-black">
+<a href=./writing/ml-hiring.html class="link black dim">
+Dos and Don'ts for ML Hiring
+</a>
+</h1>
+<div class="nested-links f5 lh-copy nested-copy-line-height">
+This is primarily for my future self. These are observations based on my own experience of 2 years at Verloop.io and helping a few companies hire for similar roles.
+Do Seniormost hire first: Start by hiring the senior most person you&rsquo;re going to hire. E.g. start by hiring the ML Lead (assuming you already have a CTO) Have a means to tell that your investment in data science is working out or not Closest to User first: Hire the person who will consume the data to build for the user first Sourcing: Begin sourcing early and over-emphasise two channels: Referrals and Portfolios Typically, in India - expect: ~2 months to close a full time role at early career (0-3 years) and ~3 months to close a mid career (3-7 years) and 6+ months to close a senior hire If a developer has open source code contributions in the last 2-3 years, consider waving off the coding or algorithmic challenge to speed up the interview process Pay above market cash salaries In 12-18 months from now, when your ML Engineer will have internalised all the requirements, company culture and built a bunch of important tooling - she would get an offer which is 2-3x of today.
+</div>
+</div>
+</div>
+</div>
 <div class="relative w-100 w-30-l mb4 bg-white"><div class="relative w-100 mb4 bg-white nested-copy-line-height">
 <div class="bg-white mb3 pa4 gray overflow-hidden">
 <span class="f6 db">Writing</span>
@@ -193,40 +224,6 @@ How to Read a Deep Learning Paper
 <div class="nested-links f5 lh-copy nested-copy-line-height">
 Who is this for? Practitioners who are looking to level up their game in Deep Learning
 Why Do We Need Instructions on How to Read a Deep Learning Paper? Quantity: There are more papers than we can humanly read even within our own niche. For instance, consider EMNLP - which is arguably the most popular Natural Language Processing conference selects more than 2K papers across a variety of topics. And NLP is just one area!
-</div>
-</div>
-</div>
-</div>
-<div class="relative w-100 w-30-l mb4 bg-white"><div class="relative w-100 mb4 bg-white nested-copy-line-height">
-<div class="bg-white mb3 pa4 gray overflow-hidden">
-<span class="f6 db">Writing</span>
-<h1 class="f3 near-black">
-<a href=./writing/character-is-net-worth.html class="link black dim">
-Character is Net Worth
-</a>
-</h1>
-<div class="nested-links f5 lh-copy nested-copy-line-height">
-A useful metaphor to think about character of a person is their financial “net worth”. Like your net worth, this does not mean that you have that much cash to spend. It is a sum total of something.
-Net Worth is the Sum Total of the Assets & Liabilities
-Character is the Sum Total of the Decisions you Own: Good and Bad
-Like your Net Worth can be negative due to a large liability e.
-</div>
-</div>
-</div>
-</div>
-<div class="relative w-100 w-30-l mb4 bg-white"><div class="relative w-100 mb4 bg-white nested-copy-line-height">
-<div class="bg-white mb3 pa4 gray overflow-hidden">
-<span class="f6 db">Writing</span>
-<h1 class="f3 near-black">
-<a href=./writing/first-90-days-engineer-version.html class="link black dim">
-First 90 Days - Software Engineer Version
-</a>
-</h1>
-<div class="nested-links f5 lh-copy nested-copy-line-height">
-Aditya Ankur, asked me:
-I know that there is a book for the first 90 days as an executive. Is there something similar for programmers?
-I don&rsquo;t quite know of a book/essay which covers this yet sticks to the question. So I am writing one for him.
-The First 90 Days for a New Engineer I expect each step to take roughly between 10 and 30 days, depending on the pace of your project + size of the team.
 </div>
 </div>
 </div>
